--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 envlist =
-    {py27,py34,py35}-sphinx{13,14,15}
+    {py27,py34,py35,py36}-sphinx{13,14,15,17}
 
 [testenv]
 deps =
     sphinx13: Sphinx>=1.3,<1.4
     sphinx14: Sphinx>=1.4
     sphinx15: Sphinx>=1.5
+    sphinx17: Sphinx>=1.7
 commands = sphinx-build -b html -d {envtmpdir}/doctrees -C -D master_doc=example -D extensions=sphinx_confluence,sphinx.ext.todo tests {envtmpdir}
